--- a/foci/paper.tex
+++ b/foci/paper.tex
@@ -2,6 +2,7 @@
 \usepackage[hyphens]{url}
 \usepackage{dirtytalk}
 \usepackage{tikz}
+\usepackage{csquotes}
 \def\checkmark{\tikz\fill[scale=0.4](0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;}
 
 \clubpenalty=10000  % Don't allow orphans
