--- a/foci/conclusion.tex
+++ b/foci/conclusion.tex
@@ -1,6 +1,15 @@
 \section{Conclusion}
 \label{sec:conclusion}
 
-In this paper, we've highlighted some of the privacy problems facing the world today: overreaching governments and conflicting jurisdictional policies on data.  We've separated data into to different classes and individually discussed the historical frameworks and cases that address the data, as well as ongoing decisions regarding the type of data. 
-
-In addition, we have outlined some the existing literature and proposed systems for nation state surveillance avoidance, and we have pointed out the capabilities and shortcomings of existing methods.  Lastly, we call for future work in protecting the privacy of data, both in motion and at rest, from an adversarial government.
+This paper has highlighted many of the privacy considerations facing Internet users,
+with the proliferation of cross-border geo-replicated content.  As data becomes
+increasingly replicated across national boundaries, questions of variations in laws
+and jurisdictions introduce considerable uncertainty around questions concerning
+user privacy. Although many of these tussles are currently playing out in the legal
+system, we believe that {\em technical} solutions are relevant to both debates,
+and more work on technical systems may ultimately shape these ongoing debates. Given
+the ambiguity and uncertainty that conflicting legal outcomes have introduced concerning
+these questions, we believe that technical solutions that protect user privacy---both
+for data in motion and data at rest---will become increasingly improtant in the
+coming years. This paper is a call to arms for researchers to develop more of the
+types of systems that we have highlighted, for both data in motion and data at rest.
