--- a/foci/rest.tex
+++ b/foci/rest.tex
@@ -12,7 +12,7 @@ incoming requests. In this section, we discuss some of technical questions
 regarding the privacy of data at rest, existing legal precedent, and how (and
 why) systems must protect data at rest differently than data in motion.
 
-\subsection{Privacy Questions}  
+\subsection{Privacy Concerns}  
 
 As with data in motion, encryption cannot fully solve the privacy problems
 associated with data at rest.  If stored data is encrypted, then that data
