--- a/foci/conclusion.tex
+++ b/foci/conclusion.tex
@@ -10,6 +10,6 @@ system, we believe that {\em technical} solutions are relevant to both debates,
 and more work on technical systems may ultimately shape these ongoing debates. Given
 the ambiguity and uncertainty that conflicting legal outcomes have introduced concerning
 these questions, we believe that technical solutions that protect user privacy---both
-for data in motion and data at rest---will become increasingly improtant in the
+for data in motion and data at rest---will become increasingly important in the
 coming years. This paper is a call to arms for researchers to develop more of the
 types of systems that we have highlighted, for both data in motion and data at rest.
