--- a/foci/motion.tex
+++ b/foci/motion.tex
@@ -9,15 +9,15 @@ content of the web page is data in motion as it is returned to Alice. In this
 section, we highlight the concerns associated with the privacy of data in
 motion, discuss the applicable laws and policies governing the privacy of user
 data for data in motion, and explore how specific technologies may help protect
-user privcacy in these settings.
+user privacy in these settings.
 
 \subsection{Privacy Concerns}
 
 While encryption seems like the obvious solution to protecting the privacy of
-data in motion, there are many reasons why cryptography is not a panacaea.
+data in motion, there are many reasons why cryptography is not a panacea.
 Specifically, there are still a number of ways that a skilled adversary, such
 as a nation state, can learn information.  First, the mere presence of
-communication between two parties may be revealing.  Additionaly, there has
+communication between two parties may be revealing.  Additionally, there has
 been a wide variety of research in the area of website fingerprinting, which
 can reveal information about the content based on size, content, and location
 of third- party resources.  Some unencrypted communication may reveal
@@ -110,7 +110,7 @@ companies are trying to keep their clients' data (in motion) secure; one
 example of this is the increased use of end-to-end encryption in communication
 applications.  End-to-end encryption is a step in the direction of protecting
 privacy using technology.  It has become increasingly common for governments
-to critize technologies that use end-to-end encryption; for example, the
+to criticize technologies that use end-to-end encryption; for example, the
 United Kingdom recently stated that they should have access to WhatsApp
 messages when necessary (this was in response to the recent terror attacks in
 London)~\cite{uk_whatsapp}.  The recent actions taken by many governments, not
@@ -147,7 +147,7 @@ region~\cite{levin2015alibi}.   This mechanism could be used to prove that a
 packet did not traverse a region or nation state known for surveillance. Yet,
 this mechanism is not effective for avoiding regions that are  is
 geographically close to the client or server; furthermore,  the client does
-not know until after the communication has occured whether or not the region
+not know until after the communication has occurred whether or not the region
 was avoided. It also does not provide proactive mechanisms for avoiding a
 region. 
 
