--- a/foci/rest.tex
+++ b/foci/rest.tex
@@ -24,7 +24,7 @@ access to the encryption keys, which defeats the entire point of encryption.
 A significant difference is that a nation-state adversary not only has the
 capability to eavesdrop on data, but also it can in many cases serve an
 organization, ISP, or company with a subpoena to access user data: (1)~A
-subpeona may be served {\em to an ISP}, which may also have the ability to
+subpoena may be served {\em to an ISP}, which may also have the ability to
 man-in-the-middle TLS connections; because the ISP can see the plaintext data
 in motion, then it must hand over the requested to data to the nation state,
 (2)~A subpoena may be served to a CDN, which may encrypt the data at rest, but
@@ -42,7 +42,7 @@ prohibit a provider of an electronic communication service ``from knowingly
 divulging the contents of any communication while in electronic storage by
 that service to any person other then the addressee or intended
 recipient''~\cite{stored_comm}.  The law also specifies the type of content
-that can be accessed via a subpeona, and addresses National Security Letters
+that can be accessed via a subpoena, and addresses National Security Letters
 (NSLs).  NSLs allow the Federal Bureau of Investigation (FBI) to compel the
 production of subscriber information and electronic communication
 transactional records, and the only requirement is that the FBI certifies that
@@ -66,7 +66,7 @@ on-going court case (CREDO \& Cloudflare v. Jefferson Sessions) has CREDO and
 Cloudflare arguing that NSLs violate their freedom of
 speech~\cite{cloudflare_gag}.
 
-Many of these companies that have recieved NSLs under gag order have publicly
+Many of these companies that have received NSLs under gag order have publicly
 pushed for more transparency; Google made the statement ``We have fought for
 the right to be transparent about our receipt of NSLs. This includes working
 with the government to publish statistics about NSLs we’ve received,
