--- a/foci/background.tex
+++ b/foci/background.tex
@@ -11,6 +11,6 @@ Data at rest refers to stored data. This type of data has been described as a su
 
 While this is true in an abstract sense, the measures needed to protect the privacy of both types of data are fairly different.  An example of data at rest is a database of credit card information associated with some website.  This information is stored on some machine and is accessible to incoming requests.  
 
-While encryption seems like the obvious solution to protecting the privacy of both data in motion and data at rest, there are some subtle differences between the two that results in cryptography being ill-suited as the only protection.  For data in motion, encryption provides a great deal of privacy protections.  Unfortunately, there are still a number of ways that a skilled adversary, such as a nation state, can learn information.  First, despite the content being encrypted, the mere presence of communication between two parties may be revealing.  Additionaly, there has been a wide variety of research in the area of website fingerprinting, which can reveal information about the content based on size, content, and location of third-party resources.  Some unencrypted communication may reveal information about the content of other (encrypted) communication; DNS traffic is extremely revealing and often unencrypted~\cite{isps_see}.  Lastly, some ISPs terminate TLS connections, thereby conducting man-in-the-middle attacks on encrypted traffic for network management purposes~\cite{gogo}.  The privacy problem is even more serious when looking at data at rest.  If stored data is encrypted, then that data appears to be protected, but in reality the keys used for encrypting the data are often stored on the same computer or the same network as the data.  In this case, if the attacker has access to the encrypted data, then he also has access to the encryption keys, which defeats the entire point of encryption.  
+While encryption seems like the obvious solution to protecting the privacy of both data in motion and data at rest, there are some subtle differences between the two that results in cryptography being ill-suited as the only protection.  For data in motion, encryption provides a great deal of privacy protections.  Unfortunately, there are still a number of ways that a skilled adversary, such as a nation state, can learn information.  First, despite the content being encrypted, the mere presence of communication between two parties may be revealing.  Additionaly, there has been a wide variety of research in the area of website fingerprinting, which can reveal information about the content based on size, content, and location of third-party resources.  Some unencrypted communication may reveal information about the content of other (encrypted) communication; DNS traffic is extremely revealing and often unencrypted~\cite{isps_see}.  Finally, some ISPs terminate TLS connections, thereby conducting man-in-the-middle attacks on encrypted traffic for network management purposes~\cite{gogo}.  The privacy problem is even more serious when looking at data at rest.  If stored data is encrypted, then that data appears to be protected, but in reality the keys used for encrypting the data are often stored on the same computer or the same network as the data.  In this case, if the attacker has access to the encrypted data, then he also has access to the encryption keys, which defeats the entire point of encryption.  
 
 There is one other difference that is worth pointing out.  A nation state adversary not only has the capability of wiretapping or snooping on data, but can also serve an organization, ISP, or company with a subpoena for access to their data.  In the case of an overreaching government legally asking for data, this makes the problem significantly harder.  This is evident in the following examples: 1) a subpeona is served to an ISP, which as discussed earlier can man-in-the-middle TLS connections, and because the ISP {\it can} see the plaintext data in motion, then it must hand over the requested to data to the nation state, 2) a subpoena is served to a CDN, which may encrypt the data at rest, but also stores the encryption keys, and {\it can} see the data and which clients are accessing it, so it must provide the requested data to the nation state.  
