--- a/foci/motion.tex
+++ b/foci/motion.tex
@@ -22,7 +22,7 @@ been a wide variety of research in the area of website fingerprinting, which
 can reveal information about the content based on size, content, and location
 of third- party resources.  Some unencrypted communication may reveal
 information about the content of other (encrypted) communication; DNS traffic
-is extremely revealing and often unencrypted~\cite{isps_see}.  Lastly, some
+is extremely revealing and often unencrypted~\cite{isps_see}.  Finally, some
 ISPs terminate TLS connections, thereby conducting man-in-the-middle attacks
 on encrypted traffic for network management purposes~\cite{gogo}. Thus,
 encryption alone cannot protect data in motion from a nation state adversary.
